source/CapriKit.Slang/native/slang.h

    typedef int64_t SlangInt;
typedef int32_t SlangInt;
 // namespace slang

    /** A result code for a Slang API operation.

    This type is generally compatible with the Windows API `HRESULT` type. In particular, negative
    values indicate failure results, while zero or positive results indicate success.

    In general, Slang APIs always return a zero result on success, unless documented otherwise.
    Strictly speaking a negative value indicates an error, a positive (or 0) value indicates
    success. This can be tested for with the macros SLANG_SUCCEEDED(x) or SLANG_FAILED(x).

    It can represent if the call was successful or not. It can also specify in an extensible manner
    what facility produced the result (as the integral 'facility') as well as what caused it (as an
    integral 'code'). Under the covers SlangResult is represented as a int32_t.

    SlangResult is designed to be compatible with COM HRESULT.

    It's layout in bits is as follows

    Severity | Facility | Code
    ---------|----------|-----
    31       |    30-16 | 15-0

    Severity - 1 fail, 0 is success - as SlangResult is signed 32 bits, means negative number
    indicates failure. Facility is where the error originated from. Code is the code specific to the
    facility.

    Result codes have the following styles,
    1) SLANG_name
    2) SLANG_s_f_name
    3) SLANG_s_name

    where s is S for success, E for error
    f is the short version of the facility name

    Style 1 is reserved for SLANG_OK and SLANG_FAIL as they are so commonly used.

    It is acceptable to expand 'f' to a longer name to differentiate a name or drop if unique
    without it. ie for a facility 'DRIVER' it might make sense to have an error of the form
    SLANG_E_DRIVER_OUT_OF_MEMORY
    */

    typedef int32_t SlangResult;

    struct IGlobalSession;

    struct ICompileRequest;


    /*!
    @brief A request for one or more compilation actions to be performed.
    */
    typedef struct slang::ICompileRequest SlangCompileRequest;

    enum SlangImageFormat : SlangImageFormatIntegral
    {
#define SLANG_FORMAT(NAME, DESC) SLANG_IMAGE_FORMAT_##NAME,
        // slang-image-format-defs.h
#ifndef SLANG_FORMAT
#error Must define SLANG_FORMAT macro before including image-format-defs.h
#endif

        SLANG_FORMAT(unknown, (NONE, 0, 0))
        SLANG_FORMAT(rgba32f, (FLOAT32, 4, sizeof(float) * 4))
        SLANG_FORMAT(rgba16f, (FLOAT16, 4, sizeof(uint16_t) * 4))
        SLANG_FORMAT(rg32f, (FLOAT32, 2, sizeof(float) * 2))
        SLANG_FORMAT(rg16f, (FLOAT16, 2, sizeof(uint16_t) * 2))
        SLANG_FORMAT(r11f_g11f_b10f, (NONE, 3, sizeof(uint32_t)))
        SLANG_FORMAT(r32f, (FLOAT32, 1, sizeof(float)))
        SLANG_FORMAT(r16f, (FLOAT16, 1, sizeof(uint16_t)))
        SLANG_FORMAT(rgba16, (UINT16, 4, sizeof(uint16_t) * 4))
        SLANG_FORMAT(rgb10_a2, (NONE, 4, sizeof(uint32_t)))
        SLANG_FORMAT(rgba8, (UINT8, 4, sizeof(uint32_t)))
        SLANG_FORMAT(rg16, (UINT16, 2, sizeof(uint16_t) * 2))
        SLANG_FORMAT(rg8, (UINT8, 2, sizeof(char) * 2))
        SLANG_FORMAT(r16, (UINT16, 1, sizeof(uint16_t)))
        SLANG_FORMAT(r8, (UINT8, 1, sizeof(uint8_t)))
        SLANG_FORMAT(rgba16_snorm, (UINT16, 4, sizeof(uint16_t) * 4))
        SLANG_FORMAT(rgba8_snorm, (UINT8, 4, sizeof(uint8_t) * 4))
        SLANG_FORMAT(rg16_snorm, (UINT16, 2, sizeof(uint16_t) * 2))
        SLANG_FORMAT(rg8_snorm, (UINT8, 2, sizeof(uint8_t) * 2))
        SLANG_FORMAT(r16_snorm, (UINT16, 1, sizeof(uint16_t)))
        SLANG_FORMAT(r8_snorm, (UINT8, 1, sizeof(uint8_t)))
        SLANG_FORMAT(rgba32i, (INT32, 4, sizeof(int32_t) * 4))
        SLANG_FORMAT(rgba16i, (INT16, 4, sizeof(int16_t) * 4))
        SLANG_FORMAT(rgba8i, (INT8, 4, sizeof(int8_t) * 4))
        SLANG_FORMAT(rg32i, (INT32, 2, sizeof(int32_t) * 2))
        SLANG_FORMAT(rg16i, (INT16, 2, sizeof(int16_t) * 2))
        SLANG_FORMAT(rg8i, (INT8, 2, sizeof(int8_t) * 2))
        SLANG_FORMAT(r32i, (INT32, 1, sizeof(int32_t)))
        SLANG_FORMAT(r16i, (INT16, 1, sizeof(int16_t)))
        SLANG_FORMAT(r8i, (INT8, 1, sizeof(int8_t)))
        SLANG_FORMAT(rgba32ui, (UINT32, 4, sizeof(uint32_t) * 4))
        SLANG_FORMAT(rgba16ui, (UINT16, 4, sizeof(uint16_t) * 4))
        SLANG_FORMAT(rgb10_a2ui, (NONE, 4, sizeof(uint32_t)))
        SLANG_FORMAT(rgba8ui, (UINT8, 4, sizeof(uint8_t) * 4))
        SLANG_FORMAT(rg32ui, (UINT32, 2, sizeof(uint32_t) * 2))
        SLANG_FORMAT(rg16ui, (UINT16, 2, sizeof(uint16_t) * 2))
        SLANG_FORMAT(rg8ui, (UINT8, 2, sizeof(uint8_t) * 2))
        SLANG_FORMAT(r32ui, (UINT32, 1, sizeof(uint32_t)))
        SLANG_FORMAT(r16ui, (UINT16, 1, sizeof(uint16_t)))
        SLANG_FORMAT(r8ui, (UINT8, 1, sizeof(uint8_t)))
        SLANG_FORMAT(r64ui, (UINT64, 1, sizeof(uint64_t)))
        SLANG_FORMAT(r64i, (INT64, 1, sizeof(int64_t)))
        SLANG_FORMAT(bgra8, (UINT8, 4, sizeof(uint32_t)))

#undef SLANG_FORMAT
    };

struct ISession;

    struct IComponentType;

    struct IModule;

    /** @see slang::ICompileRequest::getProgram
     */
    SLANG_API SlangResult
        spCompileRequest_getProgram(SlangCompileRequest* request, slang::IComponentType** outProgram);


    /** @see slang::ICompileRequest::getProgramWithEntryPoints
     */
    SLANG_API SlangResult spCompileRequest_getProgramWithEntryPoints(
        SlangCompileRequest* request,
        slang::IComponentType** outProgram);


    /** @see slang::ICompileRequest::getEntryPoint
     */
    SLANG_API SlangResult spCompileRequest_getEntryPoint(
        SlangCompileRequest* request,
        SlangInt entryPointIndex,
        slang::IComponentType** outEntryPoint);


    /** @see slang::ICompileRequest::getModule
     */
    SLANG_API SlangResult spCompileRequest_getModule(
        SlangCompileRequest* request,
        SlangInt translationUnitIndex,
        slang::IModule** outModule);


    /** @see slang::ICompileRequest::getSession
     */
    SLANG_API SlangResult
        spCompileRequest_getSession(SlangCompileRequest* request, slang::ISession** outSession);


typedef ISlangBlob IBlob;


struct IComponentType;

struct IGlobalSession;

struct IModule;

enum SlangLanguageVersion
{
    SLANG_LANGUAGE_VERSION_UNKNOWN = 0,
    SLANG_LANGUAGE_VERSION_LEGACY = 2018,
    SLANG_LANGUAGE_VERSION_2025 = 2025,
    SLANG_LANGUAGE_VERSION_2026 = 2026,
    SLANG_LANGAUGE_VERSION_DEFAULT = SLANG_LANGUAGE_VERSION_LEGACY,
    SLANG_LANGUAGE_VERSION_LATEST = SLANG_LANGUAGE_VERSION_2026,
};



/* Description of a Slang global session.
 */
struct SlangGlobalSessionDesc
{
    /// Size of this struct.
    uint32_t structureSize = sizeof(SlangGlobalSessionDesc);

    /// Slang API version.
    uint32_t apiVersion = SLANG_API_VERSION;

    /// Specify the oldest Slang language version that any sessions will use.
    uint32_t minLanguageVersion = SLANG_LANGUAGE_VERSION_2025;

    /// Whether to enable GLSL support.
    bool enableGLSL = false;

    /// Reserved for future use.
    uint32_t reserved[16] = {};
};


/* Create a blob from binary data.
 *
 * @param data Pointer to the binary data to store in the blob. Must not be null.
 * @param size Size of the data in bytes. Must be greater than 0.
 * @return The created blob on success, or nullptr on failure.
 */
SLANG_EXTERN_C SLANG_API ISlangBlob* slang_createBlob(const void* data, size_t size);


/* Load a module from source code with size specification.
 *
 * @param session The session to load the module into.
 * @param moduleName The name of the module.
 * @param path The path for the module.
 * @param source Pointer to the source code data.
 * @param sourceSize Size of the source code data in bytes.
 * @param outDiagnostics (out, optional) Diagnostics output.
 * @return The loaded module on success, or nullptr on failure.
 */
SLANG_EXTERN_C SLANG_API slang::IModule* slang_loadModuleFromSource(
    slang::ISession* session,
    const char* moduleName,
    const char* path,
    const char* source,
    size_t sourceSize,
    ISlangBlob** outDiagnostics = nullptr);


/** Load a module from IR data.
 * @param session The session to load the module into.
 * @param moduleName Name of the module to load.
 * @param path Path for the module (used for diagnostics).
 * @param source IR data containing the module.
 * @param sourceSize Size of the IR data in bytes.
 * @param outDiagnostics (out, optional) Diagnostics output.
 * @return The loaded module on success, or nullptr on failure.
 */
SLANG_EXTERN_C SLANG_API slang::IModule* slang_loadModuleFromIRBlob(
    slang::ISession* session,
    const char* moduleName,
    const char* path,
    const void* source,
    size_t sourceSize,
    ISlangBlob** outDiagnostics = nullptr);


/** Read module info (name and version) from IR data.
 * @param session The session to use for loading module info.
 * @param source IR data containing the module.
 * @param sourceSize Size of the IR data in bytes.
 * @param outModuleVersion (out) Module version number.
 * @param outModuleCompilerVersion (out) Compiler version that created the module.
 * @param outModuleName (out) Name of the module.
 * @return SLANG_OK on success, or an error code on failure.
 */
SLANG_EXTERN_C SLANG_API SlangResult slang_loadModuleInfoFromIRBlob(
    slang::ISession* session,
    const void* source,
    size_t sourceSize,
    SlangInt& outModuleVersion,
    const char*& outModuleCompilerVersion,
    const char*& outModuleName);


/* Create a global session, with the built-in core module.

@param apiVersion Pass in SLANG_API_VERSION
@param outGlobalSession (out)The created global session.
*/
SLANG_EXTERN_C SLANG_API SlangResult
slang_createGlobalSession(SlangInt apiVersion, slang::IGlobalSession** outGlobalSession);



/* Create a global session, with the built-in core module.

@param desc Description of the global session.
@param outGlobalSession (out)The created global session.
*/
SLANG_EXTERN_C SLANG_API SlangResult slang_createGlobalSession2(
    const SlangGlobalSessionDesc* desc,
    slang::IGlobalSession** outGlobalSession);


/* Create a global session, but do not set up the core module. The core module can
then be loaded via loadCoreModule or compileCoreModule

@param apiVersion Pass in SLANG_API_VERSION
@param outGlobalSession (out)The created global session that doesn't have a core module setup.

NOTE! API is experimental and not ready for production code
*/
SLANG_EXTERN_C SLANG_API SlangResult slang_createGlobalSessionWithoutCoreModule(
    SlangInt apiVersion,
    slang::IGlobalSession** outGlobalSession);


/* Returns a blob that contains the serialized core module.
Returns nullptr if there isn't an embedded core module.

NOTE! API is experimental and not ready for production code
*/
SLANG_API ISlangBlob* slang_getEmbeddedCoreModule();



/* Cleanup all global allocations used by Slang, to prevent memory leak detectors from
 reporting them as leaks. This function should only be called after all Slang objects
 have been released. No other Slang functions such as `createGlobalSession`
 should be called after this function.
 */
SLANG_EXTERN_C SLANG_API void slang_shutdown();


/* Return the last signaled internal error message.
 */
SLANG_EXTERN_C SLANG_API const char* slang_getLastInternalErrorMessage();

class IByteCodeRunner;


struct ByteCodeRunnerDesc
{
    /** The size of this structure, in bytes.
     */
    size_t structSize = sizeof(ByteCodeRunnerDesc);
};
 // namespace slang

/// Create a byte code runner that can execute Slang byte code.
SLANG_EXTERN_C SLANG_API SlangResult slang_createByteCodeRunner(
    const slang::ByteCodeRunnerDesc* desc,
    slang::IByteCodeRunner** outByteCodeRunner);


/// Disassemble a Slang byte code blob into human-readable text.
SLANG_EXTERN_C SLANG_API SlangResult
slang_disassembleByteCode(slang::IBlob* moduleBlob, slang::IBlob** outDisassemblyBlob);

inline SlangResult createGlobalSession(slang::IGlobalSession** outGlobalSession)
{
    SlangGlobalSessionDesc defaultDesc = {};
    return slang_createGlobalSession2(&defaultDesc, outGlobalSession);
}

inline SlangResult createGlobalSession(
    const SlangGlobalSessionDesc* desc,
    slang::IGlobalSession** outGlobalSession)
{
    return slang_createGlobalSession2(desc, outGlobalSession);
}

inline void shutdown()
{
    slang_shutdown();
}

inline const char* getLastInternalErrorMessage()
{
    return slang_getLastInternalErrorMessage();
}